PROJECT(tiny)
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
SET(CMAKE_BUILD_TYPE Debug)

add_subdirectory(service)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(tiny ${DIR_SRCS})
TARGET_LINK_LIBRARIES(tiny dl lua pthread m)

